--- a/data/wifimanager.html
+++ b/data/wifimanager.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>ESP Wi-Fi Manager</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
   <div class="topnav">
     <h1>ESP Wi-Fi Manager</h1>
-  </div>
+    <h2>Tiempo en la ESP : <span id = "servertime"> </span></h2>
+    <ul >
+          <li><a class="menubar" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
+          <li><a class="menubar" href="wifimanager.html"><i class = "fas fa-wifi"></i>Cambiar wifi</a></li>
+          <li><a class="menubar" href="time.html"><i class = "fas fa-clock"></i>Corregir hora</a></li>
+        </ul>
   <div class="content">
     <div class="card-grid">
       <div class="card">
